@@ -11,15 +11,15 @@ import java.util.List;
 public class RNAdManagerPackage implements ReactPackage {
     @Override
     public List<NativeModule> createNativeModules(ReactApplicationContext reactContext) {
-        return Arrays.asList(
-            new RNAdManagerNativeManager(reactContext)
+        return List.of(
+                new RNAdManagerNativeManager(reactContext)
         );
     }
 
     @Override
     public List<ViewManager> createViewManagers(ReactApplicationContext reactContext) {
         return Arrays.asList(
-            new RNAdManagerNativeViewManager(reactContext),
+                new RNAdManagerNativeViewManager(reactContext),
                 new RNAdMediaViewManager()
         );
     }
